k8s/backend-namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: backend-namespace
  labels:
    app: backend-videos
