k8s/backend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  namespace: backend-namespace
  labels:
    app: backend-videos
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend-videos
  template:
    metadata:
      labels:
        app: backend-videos
    spec:
      containers:
        - name: backend-videos
          image: matlock0o/backend-apis:backend-videos-149780db5553e1b090dcbcfb282edf4015fdecdf
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /vids-api/health
              port: 8080
            initialDelaySeconds: 50
            periodSeconds: 5
            timeoutSeconds: 10
