k8s/backend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: backend-namespace
spec:
  type: ClusterIP
  selector:
    app: backend-videos
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
